--- a/widgets/secretpasswidget.ui
+++ b/widgets/secretpasswidget.ui
@@ -36,7 +36,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #393939;
+        <string notr="true">
 border-radius: 20%;
 margin: 30% 60%</string>
        </property>
@@ -72,7 +72,7 @@ margin: 30% 60%</string>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #393939;
+        <string notr="true">
 border-radius: 50px;
 margin: 30% 60%</string>
        </property>
