--- a/dialogs/notecreatedialog.ui
+++ b/dialogs/notecreatedialog.ui
@@ -68,7 +68,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QLabel" name="titleLabel">
+        <widget class="QLabel" name="titleLabelCreate">
          <property name="font">
           <font>
            <pointsize>13</pointsize>
