--- a/widgets/infowidget.ui
+++ b/widgets/infowidget.ui
@@ -77,11 +77,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	background-color: #403F3F;
-	border-radius: 15px;
-	color: white;
-}</string>
+        <string notr="true">border-radius: 15px;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -153,11 +149,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	background-color: #403F3F;
-	border-radius: 15px;
-	color: white;
-}</string>
+        <string notr="true">border-radius: 15px;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -229,11 +221,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	background-color: #403F3F;
-	border-radius: 15px;
-	color: white;
-}</string>
+        <string notr="true">border-radius: 15px;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -305,11 +293,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	background-color: #403F3F;
-	border-radius: 15px;
-	color: white;
-}</string>
+        <string notr="true">border-radius: 15px;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -381,11 +365,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	background-color: #403F3F;
-	border-radius: 15px;
-	color: white;
-}</string>
+        <string notr="true">border-radius: 15px;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignCenter</set>
