--- a/widgets/noteswidget.ui
+++ b/widgets/noteswidget.ui
@@ -38,14 +38,7 @@
           <bool>false</bool>
          </property>
          <property name="styleSheet">
-          <string notr="true">QListView::item {
-	margin: 5px 5px;
-	background-color: #403F3F;
-	border-radius: 10%;
-	height: 40px;
-	color: white;
-}
-</string>
+          <string notr="true"/>
          </property>
          <property name="editTriggers">
           <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
